Add validation to service type

--- a/service/service-type-IaaS.yml
+++ b/service/service-type-IaaS.yml
@@ -8,3 +8,4 @@ Service type:
         label: Compute
       - type: checkbox
         label: Storage
+    validationNotAnswered: "Please choose at least one category"
