--- a/service/pricing.yml
+++ b/service/pricing.yml
@@ -1,6 +1,6 @@
 Pricing:
   Service price:
-    hint: "If you offer bulk pricing, include type here, eg 10-99 users or 50+ users"
+    hint: ""
     mockAnswer: "1-9 users, 10-99 users, 100+ users"
     dependsOnLots: SaaS, PaaS, IaaS, SCS
     fields:
@@ -65,12 +65,12 @@ Pricing:
   Pricing document:
     dependsOnLots: SaaS, PaaS, IaaS, SCS
     mockAnswer: Pricing Document Umbraco 102014.odf
-    hint: "Please upload your pricing document. Use an open document format, eg odf, pdf or pda. (Maximum file size 5MB.)"
+    hint: "Please upload your pricing document. This document will not be indexed by search on the Digital Marketplace. Use an open document format, eg odf, pdf or pda. (Maximum file size 5MB.)"
     fields:
       - type: upload
   Skills Framework for the Information Age (SFIA) rate card:
     dependsOnLots: SaaS, PaaS, IaaS, SCS
     mockAnswer: Rate Card Umbraco 102014.odf
-    hint: "Please upload your SFIA rate card if you have one. Use an open document format, eg odf, pdf or pda. (Maximum file size 5MB.)"
+    hint: "Please upload your SFIA rate card if you have one. This document will not be indexed by search on the Digital Marketplace. Use an open document format, eg odf, pdf or pda. (Maximum file size 5MB.)"
     fields:
       - type: upload
