Add validation to service type for SCS lot

--- a/service/service-type-SCS.yml
+++ b/service/service-type-SCS.yml
@@ -14,3 +14,4 @@ Service type:
         label: Training
       - type: checkbox
         label: Ongoing support
+    validationNotAnswered: "Please choose at least one category"
