Add validation to service type for SaaS lot

--- a/service/service-type-SaaS.yml
+++ b/service/service-type-SaaS.yml
@@ -33,6 +33,7 @@ Service type:
       - type: checkbox
         label: Operations management
       - type: checkbox
+    validationNotAnswered: "Please choose at least one category"
         label: Project management and planning
       - type: checkbox
         label: Security
