--- a/service/features-and-benefits.yml
+++ b/service/features-and-benefits.yml
@@ -6,6 +6,7 @@ Features and benefits:
     fields:
       - type: list
         addthing: Add another feature
+    validationNotAnswered: "Please list the technical features of your product"
   Service benefits:
     hint: "Include benefits that show how your service helps users improve their business. Use active phrases, eg publish content from multiple devices, quickly manage content on the move.  (Maximum 10 words per benefit. Maximum 10 benefits.)"
     mockAnswer: "Publish content, Quickly manage content on the move"
@@ -13,3 +14,4 @@ Features and benefits:
     fields:
       - type: list
         addthing: Add another business benefit
+    validationNotAnswered: "Please list the benefits of your service"
