--- a/service/open-standards.yml
+++ b/service/open-standards.yml
@@ -4,3 +4,4 @@ Open standards:
     hint: "Take a look at the GOV.UK Open Standards principles for more information on open standards."
     fields:
       - type: boolean
+    validationNotAnswered: "Please answer if open standards are supported and documented"
