--- a/service/provisioning.yml
+++ b/service/provisioning.yml
@@ -3,13 +3,16 @@ Provisioning:
     dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: boolean
+    validationNotAnswered: "Please answer if self-service provisioning is supported"
   Service provisioning time:
     dependsOnLots: SaaS, PaaS, IaaS
     hint: "How long does it take to get your service up and running? For example 1 to 5 hours, 2 to 3 days."
     fields:
       - type: text
+    validationNotAnswered: "Please give your service provisioning time"
   Service deprovisioning time:
     dependsOnLots: SaaS, PaaS, IaaS
     hint: ""
     fields:
       - type: text
+    validationNotAnswered: "Please give your service deprovisioning time"
