--- a/service/certifications.yml
+++ b/service/certifications.yml
@@ -5,3 +5,4 @@ Certifications:
     fields:
       - type: list
         addthing: Add another certification
+    validationNotAnswered: "Please list the vendor certifications"
