--- a/service/identity-standards.yml
+++ b/service/identity-standards.yml
@@ -5,3 +5,4 @@ Identity standards:
     fields:
       - type: list
         addthing: Add another standard
+    validationNotAnswered: "Please list the identity standards your service uses"
