--- a/service/security/secure-development.yml
+++ b/service/security/secure-development.yml
@@ -7,6 +7,7 @@ Secure development:
     fields:
       - type: boolean
       - type: assurance
+    validationNotAnswered: "Please answer if development of the service is secure"
   "Secure design, coding, testing and deployment":
     requirements: Consumers should be sufficiently confident that development is carried out in line with industry good practice regarding secure design, coding, testing and deployment.
     filters: Consumers should be sufficiently confident that development is carried out in line with industry good practice regarding secure design, coding, testing and deployment.
@@ -15,6 +16,7 @@ Secure development:
     fields:
       - type: boolean
       - type: assurance
+    validationNotAnswered: "Please answer if design, coding, testing and deployment of the service are all secure"
   "Software configuration management":
     requirements: Consumers should be sufficiently confident that configuration management processes are in place to ensure the integrity of the solution through development, testing and deployment.
     filters: Consumers should be sufficiently confident that configuration management processes are in place to ensure the integrity of the solution through development, testing and deployment.
@@ -23,3 +25,4 @@ Secure development:
     fields:
       - type: boolean
       - type: assurance
+    validationNotAnswered: "Please answer if the service provides software configuration management"
