--- a/service/certifications.yml
+++ b/service/certifications.yml
@@ -2,6 +2,7 @@ Certifications:
   Vendor certification(s):
     dependsOnLots: SaaS, PaaS, IaaS, SCS
     hint: "Examples of certifications include VMware Certified Professional and Oracle Gold Partner. (Optional.)"
+    listItemName: "example"
     fields:
       - type: list
         addthing: Add another certification
