--- a/supplier/supplier-information.yml
+++ b/supplier/supplier-information.yml
@@ -39,6 +39,7 @@ Supplier information:
   Client list:
     hint: You can choose to include a list of clients you work with here. Any client listings you include will appear on your supplier page on the Digital Marketplace. (Maximum 10 clients.)
     mockAnswer: "DEFRA, Ministry of Justice, GDS"
+    listItemName: "client"
     fields:
       - type: list
         addthing: Add another client
