--- a/service/service-definition.yml
+++ b/service/service-definition.yml
@@ -5,6 +5,6 @@ Service definition:
     dependsOnLots: SaaS, PaaS, IaaS, SCS
     fields:
       - type: upload
-    validationNotAnswered: "Please upload your service definition"
-    validationWrongFormat: "Please upload your service definition in a recognised format"
-    validationTooLarge: "Please upload a version of your service definition below the maximum size"
+    validationUploadFail: "Your document failed to upload. Please try again."
+    validationWrongFormat: "Your document is not in an open document format. Please save in an odf, pdf or pda format."
+    validationTooLarge: "Your document exceeds the 5MB limit. Please reduce file size."
