--- a/service/cloud-features.yml
+++ b/service/cloud-features.yml
@@ -3,14 +3,14 @@ Cloud features:
     dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: boolean
-    validationNotAnswered: "Please answer if elastic cloud approach is supported"
+    validationNotAnswered: "This question requires an answer."
   Guaranteed resources defined:
     dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: boolean
-    validationNotAnswered: "Please answer if guaranteed resources are defined"
+    validationNotAnswered: "This question requires an answer."
   Persistent storage supported:
     dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: boolean
-    validationNotAnswered: "Please answer if persistent storage is supported"
+    validationNotAnswered: "This question requires an answer."
