--- a/service/data-storage.yml
+++ b/service/data-storage.yml
@@ -3,12 +3,12 @@ Data storage:
     dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: boolean
-    validationNotAnswered: "Please answer if the datacentres adhere to EU Code of Conduct for Operations"
+    validationNotAnswered: "This question requires an answer."
   User-defined data location:
     dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: boolean
-    validationNotAnswered: "Please answer if the location of data can be defined by the user"
+    validationNotAnswered: "This question requires an answer."
   Datacentre tier:
     hint: Choose one
     dependsOnLots: SaaS, PaaS, IaaS
@@ -29,7 +29,7 @@ Data storage:
         label: Uptime Institute Tier 3
       - type: radio
         label: Uptime Institute Tier 4
-    validationNotAnswered: "Please choose at least one datacentre tier"
+    validationNotAnswered: "This question requires an answer."
   Backup, disaster recovery and resilience plan in place:
     dependsOnLots: SaaS, PaaS, IaaS
     hint: "You can provide more detail on your disaster recovery plan in your service definition document."
@@ -40,4 +40,4 @@ Data storage:
     dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: boolean
-    validationNotAnswered: "Please answer if there is a plan for data extraction/removal in place"
+    validationNotAnswered: "This question requires an answer."
