--- a/service/networks-and-connectivity.yml
+++ b/service/networks-and-connectivity.yml
@@ -18,4 +18,4 @@ Networks and connectivity:
         label: Joint Academic Network (JANET)
       - type: checkbox
         label: Other
-    validationNotAnswered: "Please choose at least one type of network"
+    validationNotAnswered: "This question requires an answer."
