--- a/service/onboarding-and-offboarding.yml
+++ b/service/onboarding-and-offboarding.yml
@@ -3,9 +3,9 @@ Onboarding and offboarding:
     dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: boolean
-    validationNotAnswered: "Please answer if a service onboarding process is included"
+    validationNotAnswered: "This question requires an answer."
   Service offboarding process included:
     dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: boolean
-    validationNotAnswered: "Please answer if a service offboarding process is included"
+    validationNotAnswered: "This question requires an answer."
