--- a/service/open-source.yml
+++ b/service/open-source.yml
@@ -3,4 +3,4 @@ Open source:
     dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: boolean
-    validationNotAnswered: "Please answer if open-source software is used and supported"
+    validationNotAnswered: "This question requires an answer."
