--- a/service/service-type-SCS.yml
+++ b/service/service-type-SCS.yml
@@ -14,4 +14,4 @@ Service type:
         label: Training
       - type: checkbox
         label: Ongoing support
-    validationNotAnswered: "Please choose at least one category"
+    validationNotAnswered: "This question requires an answer."
